Fixed sign_in in mock up webpage
Fixed card overlapping dropdown list.

--- a/projects/Mockups to HTML and CSS/mycss/index.css
+++ b/projects/Mockups to HTML and CSS/mycss/index.css
@@ -1,4 +1,4 @@
-body{
+body {
   margin: 0;
   height: 700px;
 }
@@ -8,14 +8,14 @@ ul {
   color: black;
   display: inline-block;
   text-decoration: none;
-  line-height: 80px;  
+  line-height: 80px;
 }
 
 h1,
 h2,
 p,
 a {
-  font-family: 'Permanent Marker', cursive;
+  font-family: "Permanent Marker", cursive;
   text-align: center;
   color: white;
   text-decoration: none;
@@ -23,7 +23,7 @@ a {
 }
 
 a {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .main-wrap {
@@ -31,27 +31,17 @@ a {
   height: 100%;
   background-image: url(../images/bg-img.jpg);
 }
-
-.header {
-  display: inline-block;
-  width: 100%;
-  height: 80px;
-  background: rgba(57, 57, 57, 0.45);
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 4px );
-  -webkit-backdrop-filter: blur( 4px );
-  border: 0px solid rgba( 255, 255, 255, 0.18 );
-}
-
 .nav-bar {
-  float: left;
-  width: 400px;
+  width: 40%;
   height: 80px;
 }
 
 .sign-in-bar {
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  left: 1104px;
+  top: -3px;
+  width: auto;
+  height: auto;
   text-align: right;
 }
 
@@ -66,10 +56,10 @@ a {
   height: 9%;
   margin-top: 10px;
   background: rgba(57, 57, 57, 0.45);
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 4px );
-  -webkit-backdrop-filter: blur( 4px );
-  border: 0px solid rgba( 255, 255, 255, 0.18 );
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 0px solid rgba(255, 255, 255, 0.18);
 }
 
 .soc-med-wrap {
@@ -105,10 +95,10 @@ a {
   width: auto;
   height: auto;
   background: rgba(57, 57, 57, 0.45);
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 4px );
-  -webkit-backdrop-filter: blur( 4px );
-  border: 0px solid rgba( 255, 255, 255, 0.18 );
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 0px solid rgba(255, 255, 255, 0.18);
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
